[package]
name    = "engine"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow 	      = { version = "1.0" }
mlua   	      = { version = "0.11.5", features = ["luajit52", "vendored", "anyhow", "serde", "async"] }
raylib 	      = { version = "5.5.1",  features = ["with_serde"]     }
mimalloc 	  = { version = "0.1.48", features = ["v3", "override"] }
serde  	      = { version = "1.0",    features = ["derive"]		    }
serde_json    = { version = "1.0"    }
serde-value   = { version = "0.7.0"  }
rmp-serde     = { version = "1.3.1"  }
renet 		  = { version = "1.2.0"  }
renet_netcode = { version = "1.2.0"  }
rapier3d      = { version = "0.29.0", features = ["simd-stable", "debug-render", "serde-serialize"] }
rfd           = { version = "0.17.2" }
zip           = { version = "7.0.0"  }
chrono        = { version = "0.4" 	 }
lz4_flex 	  = { version = "0.11"   }
engine_macro  = { path = "../engine_macro" }
